--- a/public/partials/video-form.html
+++ b/public/partials/video-form.html
@@ -11,5 +11,5 @@
     </div>
 
     <input type="button" class="btn btn-primary" value="Save" ng-click="save()"></input>
-	<input type="button" class="btn btn-primary" value="Back" ng-click="back()"></input>
+	<input type="button" class="btn btn-primary" value="Back2" ng-click="back()"></input>
 </form>
